Fix schedule menu on small devices

--- a/src/pretalx/static/cfp/css/_layout.css
+++ b/src/pretalx/static/cfp/css/_layout.css
@@ -205,6 +205,10 @@ footer {
 @media (max-width: 768px) {
   #main-container {
     max-width: 720px;
+    header .header-wrapper {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+    }
   }
 }
 
@@ -220,7 +224,7 @@ footer {
     }
 
     header {
-      padding: 10px 20px;
+      padding: 0;
       #event-logo {
         max-height: 120px;
       }
